feat: getting icons and images depending on the weather

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -1,6 +1,6 @@
 body {
-    background: #1C1F23;
-    color: #1A91DA;
+    background: #171D20;
+    color: #BDE6FB;
   }
   
   .container {
@@ -20,5 +20,5 @@ body {
   }
   
   label {
-    color: #FFC000;
+    color: #BDE6FB;
   }
